--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello coursera !</title>
+	<title>Biscuit Eating</title>
+	<meta charset="utf-8">
 </head>
 <body>
-<h1>Hello Priya !</h1>
-<h2>HEllo gowtham !!</h2>>
+	<h1>Ordered List</h1>
+	<div>
+		<h1>Orea Eating process</h1>
+		<ol>
+			<li>Open the packed</li>
+			<li>get glass of milk</li>
+			<li>Make double orea
+				<ol>
+					<li>twist the biscuit</li>
+					<li>lick the middle part</li>
+					<li>close the biscuit</li>
+				</ol>
+			</li>
+			<li>dunk in milk</li>
+			<li>enjoy !!</li>
+		</ol>
+	</div>
+
 </body>
 </html>
