--- a/site/index.html
+++ b/site/index.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Biscuit Eating</title>
+	<title>Links</title>
 	<meta charset="utf-8">
 </head>
 <body>
-	<h1>Ordered List</h1>
-	<div>
-		<h1>Orea Eating process</h1>
-		<ol>
-			<li>Open the packed</li>
-			<li>get glass of milk</li>
-			<li>Make double orea
-				<ol>
-					<li>twist the biscuit</li>
-					<li>lick the middle part</li>
-					<li>close the biscuit</li>
-				</ol>
-			</li>
-			<li>dunk in milk</li>
-			<li>enjoy !!</li>
-		</ol>
-	</div>
-
+<h1>Linking to other web pages</h1>
+<div>
+<a href="https://www.facebook.com/shanmugapriya.ramakrishnan.9" target="_blank">My FaceBook Page </a>
+</div>
 </body>
 </html>
