--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Linking to other web pages</h1>
 <div>
-<a href="https://www.facebook.com/shanmugapriya.ramakrishnan.9" target="_blank">My FaceBook Page </a>
+<a href="https://www.facebook.com/shanmugapriya.ramakrishnan.9" target="_blank">My FaceBook Page :) </a>
 </div>
 </body>
 </html>
