--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,31 @@
 <div>
 <a href="https://www.facebook.com/shanmugapriya.ramakrishnan.9" target="_blank">My FaceBook Page :) </a>
 </div>
+<div>
+<h1 id="top">Sections</h1>
+</div>
+<section>
+	<a href="#section1">Link to section 1</a>
+	<a href="#section2">Link to section 2</a>
+	<a href="#section3">Link to section 3</a>
+</section>
+<section id="section1">
+	<h2>India</h2>
+	<p>ajdhiuhcqenfcoiuhcoqncqencquhcqanbcjqbiuq
+	nakdcuiqauhqoiuehcfqhqoiuhdqiouhcoqhewodihqwodich
+	mcoqauheiuqhgeiuhgqioeudhqoihdcoqaihfqijfoiqjfoiq</p>
+</section>
+<section id="section2">
+	<h2>United states</h2>
+	<p>jadhfiuhwoenhfowihrfoiwhjnwqeinjcoiwjerlgnmqwlejf
+	nqklehfoiqwehfoiqwehfoiwenflwqenfoqwehflqneflqehfoqief
+	nijfbhqieubhfiquehfoiqejnflqknefoiquyqoiknflkqbiquygoiqenmdflqkjbdvy</p>
+</section>
+<section id="section3">
+	<h2>Bottom</h2>
+	<div>
+		<a href="#top">Go to top</a>
+	</div>
+</section>
 </body>
 </html>
