--- a/site/index.html
+++ b/site/index.html
@@ -13,9 +13,15 @@
 <h1 id="top">Sections</h1>
 </div>
 <section>
-	<a href="#section1">Link to section 1</a>
-	<a href="#section2">Link to section 2</a>
-	<a href="#section3">Link to section 3</a>
+	<ul>
+	<li><a href="#section1">Link to section 1</a></li>
+	<li><a href="#section2">Link to section 2</a></li>
+	<li><a href="#section3">Link to section 3</a></li>
+	<li><a href="#section4">Link to section 4</a></li>
+	<li><a href="#section5">Link to section 5</a></li>
+	<li><a href="#section5">Link to section 6</a></li>
+	<li><a href="#section7">Link to section 7</a></li>
+	</ul>
 </section>
 <section id="section1">
 	<h2>India</h2>
@@ -29,7 +35,34 @@
 	nqklehfoiqwehfoiqwehfoiwenflwqenfoqwehflqneflqehfoqief
 	nijfbhqieubhfiquehfoiqejnflqknefoiquyqoiknflkqbiquygoiqenmdflqkjbdvy</p>
 </section>
+</section>
 <section id="section3">
+	<h2>Singapore</h2>
+	<p>jadhfiuhwoenhfowihrfoiwhjnwqeinjcoiwjerlgnmqwlejf
+	nqklehfoiqwehfoiqwehfoiwenflwqenfoqwehflqneflqehfoqief
+	nijfbhqieubhfiquehfoiqejnflqknefoiquyqoiknflkqbiquygoiqenmdflqkjbdvy</p>
+</section>
+</section>
+<section id="section4">
+	<h2>Australia</h2>
+	<p>jadhfiuhwoenhfowihrfoiwhjnwqeinjcoiwjerlgnmqwlejf
+	nqklehfoiqwehfoiqwehfoiwenflwqenfoqwehflqneflqehfoqief
+	nijfbhqieubhfiquehfoiqejnflqknefoiquyqoiknflkqbiquygoiqenmdflqkjbdvy</p>
+</section>
+</section>
+<section id="section5">
+	<h2>canada</h2>
+	<p>jadhfiuhwoenhfowihrfoiwhjnwqeinjcoiwjerlgnmqwlejf
+	nqklehfoiqwehfoiqwehfoiwenflwqenfoqwehflqneflqehfoqief
+	nijfbhqieubhfiquehfoiqejnflqknefoiquyqoiknflkqbiquygoiqenmdflqkjbdvy</p>
+</section>
+<section id="section6">
+	<h2>thailand</h2>
+	<p>jadhfiuhwoenhfowihrfoiwhjnwqeinjcoiwjerlgnmqwlejf
+	nqklehfoiqwehfoiqwehfoiwenflwqenfoqwehflqneflqehfoqief
+	nijfbhqieubhfiquehfoiqejnflqknefoiquyqoiknflkqbiquygoiqenmdflqkjbdvy</p>
+</section>
+<section id="section7">
 	<h2>Bottom</h2>
 	<div>
 		<a href="#top">Go to top</a>
